<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sick_safetyscanners2_interfaces</name>
  <version>1.0.0</version>

  <description>Interfaces for the sick_safetyscanners ros2 driver</description>
  <maintainer email="eichmann@fzi.de">Christian Eichmann</maintainer>

  <license>ALv2</license>

  <author email="puck@fzi.de">Lennart Puck</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
